# wallpaper-engine-kde-plugin

./: CMakeLists.txt  README.md
plugin/: metadata.json
plugin/contents/ui/: Common.qml  config.qml
plugin/contents/ui/page/: AboutPage.qml  SettingPage.qml  WallpaperPage.qml
